--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
   <div class = "card-body">
       <h2 class="card-title d-flex justify-content-between mb-4">
         <span>Projects</span>
-        <%= link_to 'New Project', new_project_path, class: "btn btn-primary" %>
+        <%= link_to 'New Project', new_project_path, class: "btn btn-success" %>
       </h2>
     <% @projects.each do |project|%>
       <%=link_to project do%>
@@ -14,6 +14,7 @@
       </div>
       <% end %>
     <% end %>
+
     <table>
       <thead>
         <tr>
