--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to '<< Back', projects_path, class: "btn btn-light m-3" %>
+<%= link_to '<< Back', projects_path, class: "btn btn-light mb-3 mt-3" %>
 
 <div class="card">
   <div class="card-body">
@@ -12,26 +12,26 @@
     <h3> Description </h3>
     <p class="card-body"> <%= @project.description %></p>
     <h3> Task List </h3>
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Status</th>
-      </tr>
-      <% @project.tasks.each do |task| %>
-        <%if task.persisted? %>
-          <tr>
-            <td><%= task.name %></td>
-            <td><%= task.description %></td>
-            <td><%= task.status %></td>
-            <td><%= link_to 'Show', [task.project, task] %></td>
-            <td><%= link_to 'Edit', edit_project_task_path(task.project, task) %></td>
-            <td><%= link_to 'Destroy', [task.project, task], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <%end%>
+    <% @project.tasks.each do |task| %>
+      <% if task.persisted? %>
+        <div class = "card mb-3">
+          <div class = "card-body">
+          <div class= "d-flex justify-content-between">
+            <span class = "badge badge-<%= task.badge_color %> mb-3"> <%= task.status %> </span>
+            <div>
+              <%= link_to 'Edit', edit_project_task_path(task.project, task), class: "btn btn-warning btn-sm" %>
+              <%= link_to 'Destroy', [task.project, task], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %> 
+            </div>
+          </div>          
+            <h5 class= "card-title  mb-2">
+              <span> <strong> <%= task.name %> </strong> </span>                           
+            </h5>  
+            <span> <%=task.description%> </span>
+          </div>
+        </div>
       <% end %>
-    </table>
-    <h3>Add tasks to your project</h3>
+    <% end %>
+    <h3 class = "mt-3 mb-3">Add tasks to your project</h3>
       <%= form_for([@task.project, @task])do |f| %>
         <% if @task.errors.any? %>
           <div id="error_explanation">
@@ -44,21 +44,22 @@
             </ul>
           </div>
         <% end %>
-
-    <div class="input-group">
-      <%= f.text_field :description, class: 'form-control', placeholder: "enter description" %>
-      <div class="input-group-append">
-        <%= f.submit class: "btn btn-success" %>
+        <%= f.hidden_field :status, value: 'not-started'%>
+      <div class="input-group">
+        <%= f.text_field :name, class: 'form-control', placeholder: "type here ..." %>
+        <div class="input-group-append">
+          <%= f.submit class: "btn btn-success" %>
+        </div>  
+      </div>
+      <br>
+      <br>
+      <br>
+      <div class = "card">
+        <div class = "card-body">
+          <strong>Project by User : <%= @project.user_id%> </strong>
+        </div>
       </div>  
-    </div>
-<% end %>
- 
+    <% end %>
   </div>
 </div>
-
-<%# Here you want to add user card - i.e info, photo, follower count ect %>
-<p>
-  <strong>Project by User : <%= @project.user_id%></strong>
-</p>
-
-<%= link_to '<< Back', projects_path, class: "btn btn-primary" %>
+<%= link_to '<< Back', projects_path, class: "btn btn-light mb-3 mt-3" %>
