--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,45 +4,23 @@
         <span>Projects</span>
         <%= link_to 'New Project', new_project_path, class: "btn btn-success" %>
       </h2>
-    <% @projects.each do |project|%>
-      <%=link_to project do%>
-      <div class= "card">
-        <div class = "card-body"> 
-          <h4 class="card-title"> <%= project.name %> </h4>
-          <p> <%= project.description %> </p>
-        </div>
-      </div>
-      <% end %>
-    <% end %>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Description</th>
-          <th>User</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @projects.each do |project| %>
-          <tr>
-            <td><%= project.name %></td>
-            <td></td>
-            <td><%= project.user_id %></td>
-            <td><%= link_to 'Show', project %></td>
-            <td><%= link_to 'Edit', edit_project_path(project) %></td>
-            <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
+    <div class = "row"> 
+      <% @projects.each do |project|%>
+        <div class = "col-sm">
+        <%=link_to project, class: 'text-decoration-none' do%>   
+            <div class= "card project-card mb-3">
+              <img class = "card-img-top" src = "https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
+              <div class = "card-body"> 
+                <h4 class="card-title text-dark"> <b><%= project.name %></b></h4>
+                <p class = "text-dark"> <%= project.description %> </p>
+              </div>
+            </div>
+        </div> 
         <% end %>
-      </tbody>
-    </table>
+
+      <% end %>
+
   </div>
-
-
-
-
 <br>
 
 
