--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,15 +11,18 @@
             <div class= "card project-card mb-3">
               <img class = "card-img-top" src = "https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
               <div class = "card-body"> 
+                <div class = "mb-3">
+                  <span class = "badge badge-<%= project.badge_color %> mb-3"> <%= project.status %> </span>
+                  <span class = "text-secondary"> <small> <%=project.progress_tracker%> % completed </small></span>
+                  <span class = "text-secondary"> <small> (<%=project.completed_tasks%>/<%=project.task_counter%>)</small></span>
+                </div>              
                 <h4 class="card-title text-dark"> <b><%= project.name %></b></h4>
                 <p class = "text-dark"> <%= project.description %> </p>
               </div>
             </div>
         </div> 
         <% end %>
-
       <% end %>
-
   </div>
 <br>
 
