--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@task.project, @task], html: { class: "form-inline"} )do |f| %>
+<%= form_for([@task.project, @task] )do |f| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form group">
     <%= f.label :status %><br />
-    <%= f.select :status, Task::STATUS_OPTIONS %>
+    <%= f.select :status, Task::STATUS_OPTIONS, {}, class: "form-control btn btn-light dropdown-toggle" %>
   </div>
   <div class="actions">
     <%= f.submit class: "btn btn-primary mt-4" %>
