--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,26 +4,36 @@
         <span>Projects</span>
         <%= link_to 'New Project', new_project_path, class: "btn btn-success" %>
       </h2>
-    <div class = "row"> 
-      <% @projects.each do |project|%>
-        <div class = "col-sm">
-        <%=link_to project, class: 'text-decoration-none' do%>   
-            <div class= "card project-card mb-3">
-              <img class = "card-img-top" src = "https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
-              <div class = "card-body"> 
-                <div class = "mb-3">
-                  <span class = "badge badge-<%= project.badge_color %> mb-3"> <%= project.status %> </span>
-                  <span class = "text-secondary"> <small> <%=project.progress_tracker%> % completed </small></span>
-                  <span class = "text-secondary"> <small> (<%=project.completed_tasks%>/<%=project.task_counter%>)</small></span>
-                </div>              
-                <h4 class="card-title text-dark"> <b><%= project.name %></b></h4>
-                <p class = "text-dark"> <%= project.description %> </p>
-              </div>
-            </div>
-        </div> 
-        <% end %>
+
+<div class="child-page-listing">
+  <div class = "grid-container">
+    <%# Loop through each project %>
+    <% @projects.each do |project|%>
+    <article class="project-listing">
+      <%=link_to project, class: 'text-decoration-none' do%>
+      <div class = "project-title">
+        <h5> <%= project.name %> </h5>
+      </div>
+      <div class = "project-footer">
+        <span class = "badge badge-<%= project.badge_color%>" >
+          <%=project.status%>
+        </span>
+         <span class = "badge badge-<%= project.badge_color%>" > 
+          <%= project.progress_tracker%> % completed
+          (<%= project.completed_tasks%>/<%= project.task_counter%>)
+         </span> 
+      </div>
+      
+      <div class="project-image">
+          <img id = "image" src = "https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"> 
+      </div>
       <% end %>
+    </article>
+    <% end %>
   </div>
-<br>
+</div>
+
+      
+    
 
 
