--- a/app/javascript/Stylesheets/_base.scss
+++ b/app/javascript/Stylesheets/_base.scss
@@ -13,10 +13,12 @@ body {
 
 .card {
   border-radius: 0 !important;
-  -webkit-box-shadow: -4px 0px 5px 0.25px rgba(0,0,0,0.16);
-  -moz-box-shadow: -4px 0px 5px 0.25px rgba(0,0,0,0.16);
-  box-shadow: -4px 0px 5px 0.25px rgba(0,0,0,0.16);
+  border: 0;
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
+  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
 }
+
 
 // Image overlay hover effect
 
@@ -60,9 +62,9 @@ img {
 }
 
 .project-image {
-  -webkit-box-shadow: -4px 0px 5px 0.25px rgba(0,0,0,0.16);
-  -moz-box-shadow: -4px 0px 5px 0.25px rgba(0,0,0,0.16);
-  box-shadow: -4px 0px 5px 0.25px rgba(0,0,0,0.16);
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
+  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
 }
 
 .project-footer {
