--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <a class="navbar-brand" href="/">
         <i class="fas fa-project-diagram"></i>
         Open_Projects
@@ -22,14 +22,17 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form class="form-inline my-2 my-lg-0">
-          <a href="/projects" class="btn btn-light">My Projects</a>
-          <a href="#" class="btn btn-light">Sign out</a>
-        </form>
-      </div>
-
+      <ul class="navbar-nav mr-auto">
+      <% if user_signed_in? %>
+        <li class = "nav-item active">
+        <%= link_to('Logout', destroy_user_session_path, class: "btn btn-danger", method: :delete) %>
+        </li>
+      <% else %>
+        <li class = "nav-item active">
+        <%= link_to('Login', new_user_session_path) %>
+        </li>
+      <% end %>
+      </ul>
     </nav>
     <div class="container pt-5">
       <p class="notice"><%= notice %></p>
