--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,24 +15,21 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
-      <a class="navbar-brand" href="/">
-        <i class="fas fa-project-diagram"></i>
-        Open_Projects
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
-        <li class = "nav-item active">
-        <%= link_to('Logout', destroy_user_session_path, class: "btn btn-danger", method: :delete) %>
-        </li>
-      <% else %>
-        <li class = "nav-item active">
-        <%= link_to('Login', new_user_session_path) %>
-        </li>
-      <% end %>
-      </ul>
+        <a class="navbar-brand" href="/">
+          <i class="fas fa-project-diagram"></i>
+          Open_Projects
+        </a>
+          <ul class = "navbar-nav ml-auto">
+          <% if user_signed_in? %>
+            <span class = "nav-item active">
+            <%= link_to('Logout', destroy_user_session_path, class: "btn btn-danger", method: :delete) %>
+            </span>
+          <% else %>
+            <span class = "nav-item active">
+            <%= link_to('Login', new_user_session_path) %>
+            </span>
+          <% end %>
+          <ul>
     </nav>
     <div class="container pt-5">
       <p class="notice"><%= notice %></p>
