--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,6 +9,8 @@
         <%= link_to 'Delete', @project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
       </div>
     </h2>
+
+
     <h4> Project Details </h4>
     <p class="card-body"> <%= @project.description %></p>
     <h3 class = "mt-8 mb-3">Add tasks to your project</h3>
@@ -16,11 +18,13 @@
         <% if @task.errors.any? %>
           <div id="error_explanation">
             <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
+
             <ul>
             <% @task.errors.full_messages.each do |msg| %>
               <li><%= msg %></li>
             <% end %>
             </ul>
+
           </div>
         <% end %>
         <%= f.hidden_field :status, value: 'not-started'%>
@@ -43,10 +47,30 @@
               <div class= "d-flex justify-content-between">
                 <div>
                 <i class="far fa-hand-paper"></i>
-                <span class = "badge badge-<%= task.badge_color %> mb-3"> <%= task.status %> </span>
+                <span class = "badge badge-<%= task.color_class%> mb-3"> <%= task.status %> </span>
                 </div>
                 <div>
-                  <%= link_to 'Update Task', edit_project_task_path(task.project, task), class: "btn btn-warning btn-sm" %>
+                  <div class="dropdown float-left">
+                    <button class="btn btn-sm mr-1 btn-<%= task.color_class %> dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <%= task.readable_status %>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <% Task::STATUS_OPTIONS.each do |status| %>
+                        <a class="dropdown-item" href="#"
+                        data-reflex="click->StatusReflex#change"
+                        data-id="<%= task.id %>"
+                        data-status="<%= status[1] %>">
+                          <%= status[0] %>
+                        </a>
+                      <% end %>
+                    </div>
+                  </div>
+                  <%= link_to edit_project_task_path(task.project, task), class: 'btn btn-warning btn-sm' do %>
+                    <i class='far fa-edit'></i>
+                  <% end %>
+                  <%= link_to [task.project, task], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' do %>
+                    <i class='fas fa-trash'></i>
+                  <% end%>
                 </div>
               </div>
                 <h5 class= "card-title  mb-2">
