--- a/app/javascript/Stylesheets/_base.scss
+++ b/app/javascript/Stylesheets/_base.scss
@@ -113,3 +113,20 @@ img {
 .btn {
   border-radius: 0px!important;
 }
+
+
+
+// Sign up/login form styling
+
+.log-txt {
+  font-weight: bold;
+  margin: 25px 0 25px 0 !important;
+  color: none !important;
+}
+
+.reg-form {
+  text-align: center;
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
+  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
+}
