--- a/app/javascript/Stylesheets/_base.scss
+++ b/app/javascript/Stylesheets/_base.scss
@@ -2,6 +2,15 @@ body {
   font-family: 'Raleway', sans-serif !important;
 }
 
+// background image
+
+.cover {
+  background-image: image-url("https://unsplash.com/photos/b21Ty33CqVs");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 // Styling project list
 
 #project-list {
@@ -126,6 +135,8 @@ img {
 
 .reg-form {
   text-align: center;
+  opacity: 90%;
+  background-color: white;
   -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
   -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
   box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.16);
