--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -25,3 +25,7 @@
     <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<%= simple_form_for(project) do |f| %>
+  <%= f.input :photo, as: :file %>
+<% end %>
