--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,8 +10,13 @@
       </div>
     </h2>
 
+    <% if @project.photo.attached? %>
+      <%= cl_image_tag @project.photo.key, height: 300, width: 400, crop: :fill %>
+      <% else %>
+      <%= image_tag "https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60", height: 300, width: 300, crop: :fill %>
+    <% end %>
 
-    <h4> Project Details </h4>
+    <h4 class="mt-3"> Project Details </h4>
     <p class="card-body"> <%= @project.description %></p>
     <h3 class = "mt-8 mb-3">Add tasks to your project</h3>
       <%= form_for([@task.project, @task])do |f| %>
