--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,7 +11,7 @@
     </h2>
 
     <% if @project.photo.attached? %>
-      <%= cl_image_tag @project.photo.key, height: 300, width: 400, crop: :fill %>
+      <%= image_tag (@project.photo), crop: :fill %>
       <% else %>
       <%= image_tag "https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60", height: 300, width: 300, crop: :fill %>
     <% end %>
